--- a/Monty Hall/Monty Hall/Monty Hall.csproj
+++ b/Monty Hall/Monty Hall/Monty Hall.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Monty_Hall</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleApp1\ConsoleApp1.csproj" />
+  </ItemGroup>
+
 </Project>
